添加随机数据生成模块，经销商和客户添加功能已完成，测试通过。

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "xlsx": "0.14.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^5.5.3",
     "@vue/cli-plugin-babel": "4.4.4",
     "@vue/cli-plugin-eslint": "4.4.4",
     "@vue/cli-plugin-unit-jest": "4.4.4",
