--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1"
+    "xlsx": "0.14.1",
+    "@faker-js/faker": "^5.5.3"
   },
   "devDependencies": {
-    "@faker-js/faker": "^5.5.3",
     "@vue/cli-plugin-babel": "4.4.4",
     "@vue/cli-plugin-eslint": "4.4.4",
     "@vue/cli-plugin-unit-jest": "4.4.4",
@@ -82,8 +82,6 @@
     "admin",
     "dashboard",
     "element-ui",
-    "boilerplate",
-    "admin-template",
     "management-system"
   ],
   "license": "MIT",
