--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "智慧云平台运营服务管理系统前端",
   "author": "askar882 <askar882@qq.com>",
   "scripts": {
-    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "lint": "eslint --ext .js,.vue src",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
     "preview": "node build/index.js --preview",
     "new": "plop",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
@@ -16,7 +16,6 @@
   "dependencies": {
     "axios": "0.18.1",
     "clipboard": "2.0.4",
-    "codemirror": "5.45.0",
     "core-js": "3.6.5",
     "driver.js": "0.9.5",
     "echarts": "4.2.1",
@@ -30,13 +29,9 @@
     "path-to-regexp": "2.4.0",
     "screenfull": "4.2.0",
     "script-loader": "0.7.2",
-    "sortablejs": "1.8.4",
-    "tui-editor": "1.3.3",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-router": "3.0.2",
-    "vue-splitpane": "1.0.4",
-    "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
     "xlsx": "0.14.1",
     "@faker-js/faker": "^5.5.3"
